# buzz

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ANNOUNCEMENT_DEMO.md  ARCHITECTURE.md  CHANGELOG.md  CODEBASE-DEEP-DIVE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  NOSTR.md  README.md  RELEASING.md  REPORT.md  RESEARCH_POCKET_TTS_AB_PROTOCOL.md  TESTING.md  VISION.md  features.json  justfile  lefthook.yml  pnpm-lock.yaml  pnpm-workspace.yaml  preview-features.json  renovate.json
.github/workflows/: auto-tag-on-release-pr-merge.yml  ci.yml  docker.yml  helm-chart.yml  pages.yml  release.yml  sprig.yml
admin-web/src/: App.tsx
admin-web/tests/: routes.spec.ts
bench/: t1a_evidence.sh
crates/buzz-acp/: Cargo.toml  README.md
crates/buzz-acp-node-launcher/: Cargo.toml
crates/buzz-acp/src/: acp.rs  base_prompt.md  config.rs  filter.rs  lib.rs  pool.rs  queue.rs  relay.rs  setup_mode.rs
crates/buzz-admin/src/: main.rs
crates/buzz-agent/: README.md
crates/buzz-agent/src/: agent.rs  auth.rs  builtin.rs  catalog.rs  config.rs  hints.rs  lib.rs  llm.rs  mcp.rs  types.rs  wire.rs
crates/buzz-agent/tests/: databricks_oauth.rs  fake_llm.rs  hints_integration.rs  regressions.rs
crates/buzz-audit/src/: error.rs
crates/buzz-auth/src/: access.rs  error.rs  nip98_replay.rs
crates/buzz-cli/: README.md  TESTING.md
crates/buzz-cli/src/: client.rs  lib.rs  validate.rs
crates/buzz-conformance/: LIMITS.md  TRACE_SCHEMA.md
crates/buzz-conformance/src/: checker.rs  transitions.rs
crates/buzz-conformance/tests/: replay_fixtures.rs
crates/buzz-core/src/: agent_turn_metric.rs  channel.rs  engram.rs  filter.rs  git_perms.rs  kind.rs  lib.rs  observer.rs  tenant.rs
crates/buzz-db/src/: api_token.rs  archived_identities.rs  channel.rs  event.rs  lib.rs  migration.rs  push.rs  relay_members.rs  thread.rs  user.rs  workflow.rs
crates/buzz-dev-mcp/src/: lib.rs  paths.rs  shell.rs  view_image.rs
crates/buzz-media/src/: bucket_index.rs  sanitize.rs  upload.rs  validation.rs
crates/buzz-media/tests/: media_compliance.rs
crates/buzz-pair-relay/src/: lib.rs
crates/buzz-pair-relay/tests/: integration.rs
crates/buzz-pairing-cli/src/: main.rs
crates/buzz-persona/src/: manifest.rs  merge.rs  pack.rs  persona.rs  resolve.rs  validate.rs
crates/buzz-persona/tests/: e2e_env_flow.rs  integration.rs
crates/buzz-proxy/src/: channel_map.rs  main.rs  server.rs  translate.rs  upstream.rs
crates/buzz-pubsub/src/: cache_invalidation.rs  lib.rs  nip98_replay.rs  presence.rs  publisher.rs  subscriber.rs  topic.rs
crates/buzz-relay/: Cargo.toml
crates/buzz-relay/examples/: mesh_serve_client_smoke.rs
crates/buzz-relay/src/: auth_wire.rs  config.rs  connection.rs  invite_token.rs  lib.rs  main.rs  metrics.rs  nip11.rs  protocol.rs  push_runtime.rs  router.rs  state.rs  storage_sweep.rs
crates/buzz-sdk/src/: builders.rs  lib.rs  mentions.rs  nip_oa.rs
crates/buzz-search/src/: index.rs
crates/buzz-search/tests/: fts_integration.rs
crates/buzz-test-client/: Cargo.toml
crates/buzz-test-client/tests/: conformance_multitenant.rs  e2e_event_reminder.rs  e2e_git.rs  e2e_human_edit_agent_content.rs  e2e_long_form.rs  e2e_managed_agent.rs  e2e_media.rs  e2e_media_extended.rs  e2e_media_video.rs  e2e_mesh_llm.rs  e2e_nip37_draft.rs  e2e_nostr_interop.rs  e2e_otel.rs  e2e_persona.rs  e2e_relay.rs  e2e_rest_api.rs  e2e_team.rs  e2e_tokens.rs  e2e_user_status.rs  e2e_workflows.rs  nip42_host_binding_live.rs
crates/buzz-workflow/src/: executor.rs  lib.rs  schema.rs
crates/git-credential-nostr/src/: lib.rs
crates/git-credential-nostr/tests/: integration.rs
crates/git-sign-nostr/src/: lib.rs
crates/sprig/: Cargo.toml
crates/sprout-acp/: README.md
crates/sprout-acp/src/: base_prompt.md  config.rs  lib.rs  pool.rs  queue.rs
crates/sprout-cli/: Cargo.toml  TESTING.md
crates/sprout-relay/: Cargo.toml
crates/sprout-relay/src/: router.rs
crates/sprout-relay/src/api/: bridge.rs
crates/sprout-relay/src/api/git/: browse.rs  mod.rs  synthesis.rs  transport.rs
crates/sprout-relay/src/audio/: handler.rs
crates/sprout-relay/src/handlers/: side_effects.rs
desktop/: acp-tools.lock.json  announcementDemoAgentPlugin.ts  package.json  playwright.config.ts  tailwind.config.js  test-loader-hooks.mjs  vite.config.ts
desktop/public/: worklet.js
desktop/scripts/: build-release-config.mjs  check-file-sizes.mjs  check-px-text.mjs  ensure-acp-tools.sh  generate-oss-latest-json.sh  prepare-acp-tools-resource.sh  update-acp-tools-lock.mjs
desktop/src/: main.tsx
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
docs/: buzz-shared-compute-dev.md  git-on-object-storage.md  mesh-llm-local-build.md  multi-tenant-conformance.md  push-gateway-deployment.md  welcome-kickoff-silent-failures.md
docs/admin/: README.md
docs/nips/: NIP-AM.md  NIP-AP.md  NIP-FI-MODEL.md  NIP-FI.md  NIP-WP.md
examples/: README.md
examples/countdown-bot/: Cargo.toml  README.md
goose-acp/: Cargo.toml  README.md
goose-acp/src/: main.rs
goose-acp/tests/: stdio_turn.rs
migrations/: 0001_initial_schema.sql  0002_backfill_default_community.sql  0003_community_icon.sql  0004_events_tags_gin.sql  0004_user_git_email.sql  0005_agent_turn_metric_fts.sql  0006_add_chat_channel_type.sql  0018_push_match_queue.sql  0020_join_policy_acceptances.sql  0022_event_ttl_refresh.sql
mobile/: CHANGELOG.md  README.md  pubspec.yaml
mobile/android/: build.gradle.kts  settings.gradle.kts
mobile/lib/: app.dart
schema/: schema.sql
scripts/: _goose-env.sh  attach-schema-partitions.sql  build-ffmpeg-lgpl.sh  bundle-sidecars.sh  check-pages-site.py  check-px-text-core.mjs  generate-dev-icon.swift  mobile-release.sh  post-screenshots.sh  seed-local-community.sh  test-mobile-release-contract.sh  test-release-ref-contract.sh  verify-release-ref.sh
site/: index.html
site/assets/: style.css
site/privacy/: index.html
site/support/: index.html
test/otel-e2e/: README.md  compose.otel-e2e.yml  otelcol-config.yml  run.sh
web/: package.json  tailwind.config.js
web/src/: main.tsx
(+1264 files in other folders)
