[package]
name = "buzz-acp-node-launcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Compiled launcher shim for the bundled ACP bridge tools on Windows"

[[bin]]
name = "buzz-acp-node-launcher"
path = "src/main.rs"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Win32_System_JobObjects alone is not enough: CreateJobObjectW is gated on
# Win32_Security (its SECURITY_ATTRIBUTES parameter) and the JOBOBJECT_*
# limit structs on Win32_System_Threading. Same set as buzz-dev-mcp's
# KillGroup, minus its registry lookup.
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
