[package]
name = "sprig"
# Independent version: sprig ships as a pinnable artifact (sprig-v* tags),
# released on its own cadence. It does NOT inherit the workspace version.
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "All-in-one Buzz ACP harness, agent, and developer MCP"

[[bin]]
name = "sprig"
path = "src/main.rs"

[dependencies]
buzz-acp = { path = "../buzz-acp" }
buzz-agent = { path = "../buzz-agent" }
buzz-dev-mcp = { path = "../buzz-dev-mcp" }
